[gd_scene load_steps=8 format=2]

[ext_resource path="res://high_tech_hop.gd" type="Script" id=1]
[ext_resource path="res://high_tech_hop_player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/highhopbackgand.jpg" type="Texture" id=3]
[ext_resource path="res://Assets/high_hop_block.png" type="Texture" id=4]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=3]
0/name = "high_hop_block.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 11521, 79.25 )

[node name="high_tech_hop" type="Node2D"]
script = ExtResource( 1 )

[node name="high_tech_hop_player" parent="." instance=ExtResource( 2 )]
position = Vector2( 522, 271 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="star_sky" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 0.2 )
motion_mirroring = Vector2( 1800, 1350 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/star_sky"]
position = Vector2( 534, 253 )
scale = Vector2( 3, 3 )
z_index = -10
texture = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -4915195, 0, 0, -4915194, 0, 0, -4915193, 0, 0, -4915192, 0, 0, -4915191, 0, 0, -4915190, 0, 0, -4915189, 0, 0, -4915188, 0, 0, -4915187, 0, 0, -4915186, 0, 0, -4915185, 0, 0, -4915184, 0, 0, -4915183, 0, 0, -4915182, 0, 0, -4849659, 0, 0, -4849646, 0, 0, -4849611, 0, 0, -4849610, 0, 0, -4849609, 0, 0, -4849608, 0, 0, -4784123, 0, 0, -4784110, 0, 0, -4784075, 0, 0, -4784074, 0, 0, -4784073, 0, 0, -4784072, 0, 0, -4718587, 0, 0, -4718574, 0, 0, -4653051, 0, 0, -4653038, 0, 0, -4587515, 0, 0, -4587502, 0, 0, -4521979, 0, 0, -4521966, 0, 0, -4456443, 0, 0, -4456430, 0, 0, -4390907, 0, 0, -4390902, 0, 0, -4390894, 0, 0, -4325371, 0, 0, -4325366, 0, 0, -4325358, 0, 0, -4259835, 0, 0, -4259830, 0, 0, -4259822, 0, 0, -4194299, 0, 0, -4194294, 0, 0, -4194286, 0, 0, -4128763, 0, 0, -4128758, 0, 0, -4128750, 0, 0, -4063227, 0, 0, -4063222, 0, 0, -3997691, 0, 0, -3997686, 0, 0, -3932155, 0, 0, -3932150, 0, 0, -3866619, 0, 0, -3866614, 0, 0, -3801083, 0, 0, -3801078, 0, 0, -3801077, 0, 0, -3801076, 0, 0, -3801075, 0, 0, -3801074, 0, 0, -3801073, 0, 0, -3801072, 0, 0, -3801071, 0, 0, -3801070, 0, 0, -3801069, 0, 0, -3801068, 0, 0, -3801067, 0, 0, -3801066, 0, 0, -3801019, 0, 0, -3735547, 0, 0, -3735542, 0, 0, -3735483, 0, 0, -3670011, 0, 0, -3670006, 0, 0, -3669947, 0, 0, -3604475, 0, 0, -3604470, 0, 0, -3604411, 0, 0, -3538939, 0, 0, -3538934, 0, 0, -3538875, 0, 0, -3473403, 0, 0, -3473398, 0, 0, -3473339, 0, 0, -3407867, 0, 0, -3407862, 0, 0, -3407803, 0, 0, -3342331, 0, 0, -3342326, 0, 0, -3342267, 0, 0, -3276795, 0, 0, -3276790, 0, 0, -3276731, 0, 0, -3211259, 0, 0, -3211254, 0, 0, -3211206, 0, 0, -3211205, 0, 0, -3211204, 0, 0, -3211203, 0, 0, -3211202, 0, 0, -3211201, 0, 0, -3211200, 0, 0, -3211199, 0, 0, -3211198, 0, 0, -3211197, 0, 0, -3211196, 0, 0, -3211195, 0, 0, -3145723, 0, 0, -3145718, 0, 0, -3145670, 0, 0, -3145669, 0, 0, -3145668, 0, 0, -3145667, 0, 0, -3145666, 0, 0, -3145665, 0, 0, -3145664, 0, 0, -3145663, 0, 0, -3145662, 0, 0, -3145661, 0, 0, -3145660, 0, 0, -3145659, 0, 0, -3080187, 0, 0, -3080182, 0, 0, -3080134, 0, 0, -3080133, 0, 0, -3080132, 0, 0, -3080131, 0, 0, -3080130, 0, 0, -3080129, 0, 0, -3080128, 0, 0, -3080127, 0, 0, -3080126, 0, 0, -3080125, 0, 0, -3080124, 0, 0, -3080123, 0, 0, -3014651, 0, 0, -3014646, 0, 0, -2949115, 0, 0, -2949110, 0, 0, -2883579, 0, 0, -2883574, 0, 0, -2883550, 0, 0, -2883549, 0, 0, -2883548, 0, 0, -2883547, 0, 0, -2883546, 0, 0, -2883545, 0, 0, -2883536, 0, 0, -2883531, 0, 0, -2818043, 0, 0, -2818038, 0, 0, -2818014, 0, 0, -2818013, 0, 0, -2818012, 0, 0, -2818011, 0, 0, -2818010, 0, 0, -2818009, 0, 0, -2752507, 0, 0, -2752502, 0, 0, -2752478, 0, 0, -2752477, 0, 0, -2752476, 0, 0, -2752475, 0, 0, -2752474, 0, 0, -2752473, 0, 0, -2686971, 0, 0, -2686966, 0, 0, -2621435, 0, 0, -2621430, 0, 0, -2621429, 0, 0, -2621428, 0, 0, -2621427, 0, 0, -2621426, 0, 0, -2621425, 0, 0, -2621424, 0, 0, -2621423, 0, 0, -2621422, 0, 0, -2621421, 0, 0, -2621420, 0, 0, -2621419, 0, 0, -2621418, 0, 0, -2555899, 0, 0, -2555894, 0, 0, -2490363, 0, 0, -2490358, 0, 0, -2424827, 0, 0, -2424822, 0, 0, -2359291, 0, 0, -2359286, 0, 0, -2293755, 0, 0, -2293750, 0, 0, -2228219, 0, 0, -2228214, 0, 0, -2162683, 0, 0, -2162678, 0, 0, -2097147, 0, 0, -2097142, 0, 0, -2031611, 0, 0, -2031606, 0, 0, -1966075, 0, 0, -1966070, 0, 0, -1900539, 0, 0, -1900534, 0, 0, -1835003, 0, 0, -1834998, 0, 0, -1769467, 0, 0, -1769462, 0, 0, -1703931, 0, 0, -1703926, 0, 0, -1638395, 0, 0, -1638390, 0, 0, -1572859, 0, 0, -1572854, 0, 0, -1507323, 0, 0, -1507318, 0, 0, -1441787, 0, 0, -1441782, 0, 0, -1376251, 0, 0, -1376246, 0, 0, -1310715, 0, 0, -1245179, 0, 0, -1179643, 0, 0, -1114107, 0, 0, -1048571, 0, 0, -1048570, 0, 0, -1048569, 0, 0, -1048568, 0, 0, -1048567, 0, 0, -1048566, 0, 0, -983035, 0, 0, -983034, 0, 0, -983033, 0, 0, -983032, 0, 0, -983031, 0, 0, -983030, 0, 0, -917499, 0, 0, -917498, 0, 0, -917497, 0, 0, -917496, 0, 0, -917495, 0, 0, -917494, 0, 0, -655337, 0, 0, -655336, 0, 0, -655335, 0, 0, -655334, 0, 0, -655333, 0, 0, -655332, 0, 0, -589801, 0, 0, -589800, 0, 0, -589799, 0, 0, -589798, 0, 0, -589797, 0, 0, -589796, 0, 0, -524265, 0, 0, -524264, 0, 0, -524263, 0, 0, -524262, 0, 0, -524261, 0, 0, -524260, 0, 0, -131055, 0, 0, -131054, 0, 0, -131053, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 0, 327709, 0, 0, 327710, 0, 0, 327711, 0, 0, 327712, 0, 0, 327713, 0, 0, 327714, 0, 0, 327715, 0, 0, 327716, 0, 0, 327717, 0, 0, 327718, 0, 0, 327719, 0, 0, 327720, 0, 0, 327721, 0, 0, 327722, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 0, 0, 393245, 0, 0, 393246, 0, 0, 393247, 0, 0, 393248, 0, 0, 393249, 0, 0, 393250, 0, 0, 393251, 0, 0, 393252, 0, 0, 393253, 0, 0, 393254, 0, 0, 393255, 0, 0, 393256, 0, 0, 393257, 0, 0, 393258, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 720919, 0, 0, 720920, 0, 0, 720921, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1964, 764.75 )
shape = SubResource( 4 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
